[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grap"
version = "0.1.0b2"
description = "PEG Parser for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs>=22.2",
    "loguru>=0.6",
]
keywords = [
    "grammar",
    "parser",
    "PEG",
]
license = {text = "MIT License"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "rich>=13.3",
]
docs = [
    "furo>=2022.9.15",
    "Sphinx>=5.0.0",
    "sphinx_copybutton",
    "sphinx-argparse",
    "sphinxcontrib-repl",
    "sphinxcontrib-spelling",
    "sphinxcontrib-trio",
    "sphinxemoji",
]

[project.urls]
"Documentation" = "https://phoenixr-codes.github.io/grap/"
"Source Code" = "https://github.com/phoenixr-codes/grap/"

[tool.mypy]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

no_implicit_optional = true
warn_unused_ignores = true
